--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "nanny-state",
   "version": "1.2.0",
-  "description": "simple state management",
-  "main": "index.js",
+  "description": "Simple State Management using just JavaScript",
+  "main": "nanny.js",
   "type": "module",
   "dependencies": {
     "lit-html": "^1.4.1"
@@ -11,8 +11,8 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
-    "state",
-    "js"
+    "nanny",
+    "state"
   ],
   "author": "DAZ <daz4126@gmail.com>",
   "license": "Unlicense"
