removing test folders

--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "main": "nanny.js",
   "type": "module",
   "dependencies": {
-    "lit-html": "^1.4.1"
+    "lit-html": "^1.4.1",
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "No tests yet"
   },
   "keywords": [
     "nanny",
