--- a/package.json
+++ b/package.json
@@ -1,9 +1,13 @@
 {
   "name": "nanny-state",
   "version": "1.3.11",
-  "description": "Simple State Management using just JavaScript",
+  "description": "Simple State Management",
   "main": "nanny.js",
   "type": "module",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/daz4126/Nanny-State/"
+  },
   "dependencies": {
     "lit-html": "^1.4.1"
   },
