--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "nanny-state",
   "version": "2.0.3",
-  "description": "Simple State Management",
+  "description": "simple & minimal state Management",
   "main": "nanny.js",
   "type": "module",
   "repository": {
